tests/baselines/reference/genericRecursiveImplicitConstructorErrors3.errors.txt
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(3,66): error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(3,66): error TS2707: Type parameter 'A' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(3,66): error TS2707: Type parameter 'B' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(3,66): error TS2707: Type parameter 'C' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(10,22): error TS2707: Type parameter 'A' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(10,22): error TS2707: Type parameter 'B' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(10,22): error TS2707: Type parameter 'C' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(12,48): error TS2707: Type parameter 'A' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(12,48): error TS2707: Type parameter 'B' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(12,48): error TS2707: Type parameter 'C' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(13,31): error TS2707: Type parameter 'A' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(13,31): error TS2707: Type parameter 'B' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(13,31): error TS2707: Type parameter 'C' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(14,46): error TS2707: Type parameter 'A' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(14,46): error TS2707: Type parameter 'B' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(14,46): error TS2707: Type parameter 'C' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(18,16): error TS7023: 'getScopedNameEx' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(18,53): error TS2707: Type parameter 'A' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(18,53): error TS2707: Type parameter 'B' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(18,53): error TS2707: Type parameter 'C' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(19,22): error TS2339: Property 'isArray' does not exist on type 'PullTypeSymbol<A, B, C>'.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(20,21): error TS7022: 'elementMemberName' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(21,36): error TS2339: Property 'isArray' does not exist on type 'PullTypeSymbol<any, any, any>'.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(21,67): error TS2339: Property 'isNamedTypeSymbol' does not exist on type 'PullTypeSymbol<any, any, any>'.
tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts(23,35): error TS2339: Property 'getMemberTypeNameEx' does not exist on type 'PullTypeSymbol<any, any, any>'.


==== tests/cases/compiler/genericRecursiveImplicitConstructorErrors3.ts (25 errors) ====
    module TypeScript {
        export class MemberName <A,B,C>{
            static create<A,B,C>(arg1: any, arg2?: any, arg3?: any): MemberName {
                                                                     ~~~~~~~~~~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value.
                                                                     ~~~~~~~~~~
!!! error TS2707: Type parameter 'A' implicitly has type 'any' because it was not supplied.
                                                                     ~~~~~~~~~~
!!! error TS2707: Type parameter 'B' implicitly has type 'any' because it was not supplied.
                                                                     ~~~~~~~~~~
!!! error TS2707: Type parameter 'C' implicitly has type 'any' because it was not supplied.
            }
        }
    }
    
    module TypeScript {
        export class PullSymbol <A,B,C>{
            public type: PullTypeSymbol = null;
                         ~~~~~~~~~~~~~~
!!! error TS2707: Type parameter 'A' implicitly has type 'any' because it was not supplied.
                         ~~~~~~~~~~~~~~
!!! error TS2707: Type parameter 'B' implicitly has type 'any' because it was not supplied.
                         ~~~~~~~~~~~~~~
!!! error TS2707: Type parameter 'C' implicitly has type 'any' because it was not supplied.
        }
        export class PullTypeSymbol <A,B,C>extends PullSymbol {
                                                   ~~~~~~~~~~
!!! error TS2707: Type parameter 'A' implicitly has type 'any' because it was not supplied.
                                                   ~~~~~~~~~~
!!! error TS2707: Type parameter 'B' implicitly has type 'any' because it was not supplied.
                                                   ~~~~~~~~~~
!!! error TS2707: Type parameter 'C' implicitly has type 'any' because it was not supplied.
            private _elementType: PullTypeSymbol = null;
                                  ~~~~~~~~~~~~~~
!!! error TS2707: Type parameter 'A' implicitly has type 'any' because it was not supplied.
                                  ~~~~~~~~~~~~~~
!!! error TS2707: Type parameter 'B' implicitly has type 'any' because it was not supplied.
                                  ~~~~~~~~~~~~~~
!!! error TS2707: Type parameter 'C' implicitly has type 'any' because it was not supplied.
            public toString<A,B,C>(scopeSymbol?: PullSymbol, useConstraintInName?: boolean) {
                                                 ~~~~~~~~~~
!!! error TS2707: Type parameter 'A' implicitly has type 'any' because it was not supplied.
                                                 ~~~~~~~~~~
!!! error TS2707: Type parameter 'B' implicitly has type 'any' because it was not supplied.
                                                 ~~~~~~~~~~
!!! error TS2707: Type parameter 'C' implicitly has type 'any' because it was not supplied.
                var s = this.getScopedNameEx(scopeSymbol, useConstraintInName).toString();
                return s;
            }
            public getScopedNameEx<A,B,C>(scopeSymbol?: PullSymbol, useConstraintInName?: boolean, getPrettyTypeName?: boolean, getTypeParamMarkerInfo?: boolean) {
                   ~~~~~~~~~~~~~~~
!!! error TS7023: 'getScopedNameEx' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
                                                        ~~~~~~~~~~
!!! error TS2707: Type parameter 'A' implicitly has type 'any' because it was not supplied.
                                                        ~~~~~~~~~~
!!! error TS2707: Type parameter 'B' implicitly has type 'any' because it was not supplied.
                                                        ~~~~~~~~~~
!!! error TS2707: Type parameter 'C' implicitly has type 'any' because it was not supplied.
                if (this.isArray()) {
                         ~~~~~~~
!!! error TS2339: Property 'isArray' does not exist on type 'PullTypeSymbol<A, B, C>'.
                    var elementMemberName = this._elementType ?
                        ~~~~~~~~~~~~~~~~~
!!! error TS7022: 'elementMemberName' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
                    (this._elementType.isArray() || this._elementType.isNamedTypeSymbol() ?
                                       ~~~~~~~
!!! error TS2339: Property 'isArray' does not exist on type 'PullTypeSymbol<any, any, any>'.
                                                                      ~~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'isNamedTypeSymbol' does not exist on type 'PullTypeSymbol<any, any, any>'.
                    this._elementType.getScopedNameEx(scopeSymbol, false, getPrettyTypeName, getTypeParamMarkerInfo) :
                    this._elementType.getMemberTypeNameEx(false, scopeSymbol, getPrettyTypeName)) : 1
                                      ~~~~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'getMemberTypeNameEx' does not exist on type 'PullTypeSymbol<any, any, any>'.
                    return MemberName.create(elementMemberName, "", "[]");
                }
            }
        }
    }
    
    